OD-11758 Reverted gradle changes.